--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:cy": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^9.5.4",
     "jest-watch-typeahead": "^0.6.5",
     "react-test-renderer": "^18.0.0"
   }
